Bug fix for case items on narrow screens

--- a/_scss/_module.case-item.scss
+++ b/_scss/_module.case-item.scss
@@ -14,7 +14,7 @@
   border: 1px solid #ccc;
   margin-right: -1px;
   margin-bottom: -1px;
-  flex: 2 0 32em;
+  flex: 1 1 32em;
   transition: all .2s ease-in-out;
   overflow: hidden;
 
